# adk-guide

adk-guide/: .gitignore  README.md  pyproject.toml
adk-guide/blog_01_initial_launch_multi_agent/: 01_single_agent.py  02_custom_tool_agent.py  03_multi_agent_system.py  04_streaming_agent.py  05_mcp_tool_agent.py  README.md
adk-guide/blog_02_python_v1_java_google_io/: 01_sequential_agent_pipeline.py  02_parallel_agent_research.py  03_deploy_to_agent_engine.py  04_agent_with_session_state.py  HelloTimeAgent.java  README.md
adk-guide/blog_03_adk_for_go/: README.md  go.mod
adk-guide/blog_03_adk_for_go/01_basic_agent/: main.go
adk-guide/blog_03_adk_for_go/02_custom_tool_agent/: main.go
adk-guide/blog_03_adk_for_go/03_multi_agent_a2a/: main.go
adk-guide/blog_03_adk_for_go/04_database_agent/: main.go
adk-guide/blog_04_interactions_api/: 01_basic_interactions_api.py  02_stateful_conversation.py  03_background_execution.py  04_deep_research_agent.py  05_adk_with_interactions_transport.py  README.md
adk-guide/blog_05_adk_for_typescript/: 01_basic_agent.ts  02_custom_tool_agent.ts  03_multi_agent_system.ts  04_streaming_agent.ts  README.md  package.json
adk-guide/blog_06_python_2_alpha_graph_workflows/: 01_loop_agent.py  02_conditional_routing.py  03_human_in_the_loop.py  04_graph_workflow.py  05_custom_orchestrator.py  README.md
query_automation/: .pre-commit-config.yaml  pyproject.toml
