[project]
name = "adk-guide"
version = "0.1.0"
description = "Google Agent Development Kit (ADK) guide examples"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ADK framework
    "google-adk>=1.0.0",
    # Vertex AI / Agent Engine deployment (blog 02)
    "google-cloud-aiplatform[agent_engines,reasoningengine]",
    # Interactions API (blog 04)
    "google-generativeai",
    # A2A client (blog 04) — provides the `a2a` import namespace
    "a2a-sdk",
    # Security note: LiteLLM 1.82.7 and 1.82.8 contained unauthorized code (CVE March 2026).
    # Pin away from those versions if LiteLLM is used via ADK eval/extensions extras.
    "litellm!=1.82.7,!=1.82.8",
]

# NOTE: blog_04 also imports `interactions-api-transport` which is not yet publicly
# available on PyPI. Install it separately if you have access to the private index.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
prerelease = "if-necessary-or-explicit"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
