[project]
name = "query-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "aiohttp>=3.13.2",
    "db-sqlite3>=0.0.1",
    "faiss-cpu>=1.12.0",
    "httpx>=0.28.1",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.3",
    "langchain-huggingface>=1.0.1",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.2",
    "langgraph-checkpoint>=3.0.1",
    "mcp>=1.20.0",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "sqlparse>=0.5.3",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.3",
]

# Ruff configuration for query automation project
[tool.ruff]
# Exclude directories and files
exclude = [
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".git",
    "*.ipynb",  # Exclude Jupyter notebooks
    "build",
    "dist",
    "*.egg-info",
]

# Python version compatibility
target-version = "py313"

# Line length
line-length = 100

[tool.ruff.lint]
# Enable specific rule categories
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "PIE",  # flake8-pie
    "SIM",  # flake8-simplify
]

# Disable specific rules that might be too strict
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "B904",   # raise ... from err
    "N805",   # First argument should be named 'self'
    "UP007",  # Use X | Y for type annotations (not compatible with older Python)
]

# Allow fixes for specific rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Test files can have specific exceptions
"tests/*" = [
    "S101",   # Use of assert
    "PLR2004", # Magic value used in comparison
]

# Scripts can be less strict
"scripts/*" = [
    "T201",   # print statements allowed in scripts
    "PLR2004", # Magic values allowed in demo scripts
]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["agent_pipeline"]
force-sort-within-sections = true

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect existing line endings
line-ending = "auto"
